--- a/AppNaviBus/src/gui/Bundle.properties
+++ b/AppNaviBus/src/gui/Bundle.properties
@@ -1,4 +1,4 @@
-PantallaFormParadas.jLabelNombreParada.text=Nombre de la parada:
+PantallaFormParadas.jLabelNombreParada.text=\ Nombre de la parada:
 PantallaFormParadas.jLabelNumParada.text=N\u00famero de la parada:
 PantallaFormParadas.jTextFieldNombreParada.text=
 PantallaFormParadas.jTextFieldNumParada.text=
